samples/busybox.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod
  name: pod
spec:
  imagePullSecrets:
  - name: harbor-registry-secret
  containers:
  - image: busybox
    name: pod
    command: ['sh','-c','sleep 4800']
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
