samples/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx-app2
spec:
  replicas: 10
  selector:
    matchLabels:
      app: nginx
  strategy: 
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1

  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
      annotations:
        fluentbit.io/parser: nginx
    spec:
      imagePullSecrets:
      - name: harbor-registry-secret
      containers:
      - image: 10.213.227.68/ns1/nginx:1.14.2
        name: nginx-app
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 0
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-service
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
