samples/ingress-monitoring.yml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    kubernetes.io/ingress.allow-http: "true"
  name: prometheus-server-ingress
  namespace: tanzu-system-monitoring
spec:
  tls:
  - hosts:
    - prometheus.tanzu.com
    secretName: prometheus-server-tls
  rules:
  - host: prometheus.tanzu.com
    http:
      paths:
      - backend:
          serviceName: prometheus-server
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    kubernetes.io/ingress.allow-http: "true"
  name: prometheus-alertmanager-ingress
  namespace: tanzu-system-monitoring
spec:
  tls:
  - hosts:
    - alertmanager.tanzu.com
    secretName: prometheus-alertmanager-tls
  rules:
  - host: alertmanager.tanzu.com
    http:
      paths:
      - backend:
          serviceName: prometheus-alertmanager
          servicePort: 80
