samples/ingress-tls.yml
# kubectl create secret tls sample-ingress-tls --cert=./domain.crt --key=./domain.key

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    kubernetes.io/ingress.allow-http: "true"
  name: sample-ingress
spec:
  tls:
  - hosts:
    - sample.ingress.domain
    secretName: sample-ingress-tls
  rules:
  - host: sample.ingress.domain
    http:
      paths:
      - backend:
          serviceName: nginx-app-service
          servicePort: 80
